--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Test Project</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <section class="top-banner">
+        <div>
+            <h2 class="top-content"> <span class="top-highlight"> Skip </span>The Diet,<br>Just Eat Healthy <br>With Food Network</h2>
+            <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+            <button>Order Food</button>
+        </div>
+        <div class="top-img">
+            <img src="images/Group 8425.png" alt="model image">
+        </div>
+    </section>
 </body>
 </html>
